--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,9 @@
     "react-dom": "16.8.6"
   },
   "devDependencies": {
-    "prettier": "^1.18.2"
+    "@types/node": "^12.6.9",
+    "@types/react": "^16.8.24",
+    "prettier": "^1.18.2",
+    "typescript": "^3.5.3"
   }
 }
