--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,8 @@
     "lodash": "^4.17.15",
     "next": "9.0.3",
     "react": "16.8.6",
-    "react-dom": "16.8.6"
+    "react-dom": "16.8.6",
+    "react-modal": "^3.9.1"
   },
   "devDependencies": {
     "@types/node": "^12.6.9",
