--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/node": "^12.6.9",
     "@types/react": "^16.8.24",
+    "postcss-color-mod-function": "^3.0.3",
     "prettier": "^1.18.2",
     "typescript": "^3.5.3"
   }
