--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,8 @@
     "next": "9.0.3",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-modal": "^3.9.1"
+    "react-modal": "^3.9.1",
+    "shuffle-seed": "^1.1.6"
   },
   "devDependencies": {
     "@types/node": "^12.6.9",
