--- a/app/package.json
+++ b/app/package.json
@@ -12,9 +12,11 @@
     "firebase": "^6.3.4",
     "lodash": "^4.17.15",
     "next": "9.0.3",
+    "project-name-generator": "^2.1.7",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-modal": "^3.9.1",
+    "shortid": "^2.2.14",
     "shuffle-seed": "^1.1.6"
   },
   "devDependencies": {
