--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "server": "firebase-server -p 3001"
   },
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@types/node": "^12.6.9",
     "@types/react": "^16.8.24",
+    "firebase-server": "^1.0.2",
     "postcss-color-mod-function": "^3.0.3",
     "prettier": "^1.18.2",
     "typescript": "^3.5.3"
