--- a/now.json
+++ b/now.json
@@ -2,6 +2,16 @@
   "version": 2,
   "alias": "hanabi.now.sh",
   "scope": "hanabi",
+  "routes": [
+    {
+      "src": "^/service-worker.js$",
+      "dest": "/_next/static/service-worker.js",
+      "headers": {
+        "cache-control": "public, max-age=43200, immutable",
+        "Service-Worker-Allowed": "/"
+      }
+    }
+  ],
   "build": {
     "env": {
       "FIREBASE_API_KEY": "@firebase_api_key",
