--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-modal": "^3.9.1",
+    "react-pose": "^4.0.8",
     "shortid": "^2.2.14",
     "shuffle-seed": "^1.1.6"
   },
