--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@types/node": "^12.6.9",
     "@types/react": "^16.8.24",
+    "babel-plugin-root-import": "^6.4.1",
     "firebase-server": "^1.0.2",
     "postcss-color-mod-function": "^3.0.3",
     "prettier": "^1.18.2",
