--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/classnames": "^2.2.9",
     "@types/lodash": "^4.14.137",
+    "@types/react-popover": "^0.5.3",
     "@zeit/next-css": "^1.0.1",
     "classnames": "^2.2.6",
     "dotenv-webpack": "^1.7.0",
@@ -22,6 +23,7 @@
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-modal": "^3.9.1",
+    "react-popover": "^0.5.10",
     "react-pose": "^4.0.8",
     "shortid": "^2.2.14",
     "shuffle-seed": "^1.1.6"
