--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,23 @@
 {
-  "editor.formatOnSave": true,
+  "editor.formatOnSave":  true,
+  "[javascript]":  {
+    "editor.formatOnSave":  false,
+  },
+  "[javascriptreact]":  {
+    "editor.formatOnSave":  false,
+  },
+  "[typescript]":  {
+    "editor.formatOnSave":  false,
+  },
+  "[typescriptreact]":  {
+    "editor.formatOnSave":  false,
+  },
+  "eslint.autoFixOnSave": true,
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    { "language": "typescript", "autoFix": true },
+    { "language": "typescriptreact", "autoFix": true }
+  ],
   "typescript.preferences.importModuleSpecifier": "non-relative"
 }
