--- a/static/manifest.json
+++ b/static/manifest.json
@@ -2,10 +2,12 @@
   "short_name": "Hanabi",
   "name": "Hababi",
   "icons": [
-    { "src": "/static/hanabi.png", "type": "image/png", "sizes": "512x512" }
+    { "src": "/static/hanabi.png", "type": "image/png", "sizes": "512x512" },
+    { "src": "/static/hanabi-192.png", "type": "image/png", "sizes": "192x192" }
   ],
   "start_url": "/",
   "display": "standalone",
   "orientation": "landscape",
-  "theme_color": "#00153f"
+  "theme_color": "#00153f",
+  "background_color": "#00153f"
 }
