--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "shuffle-seed": "^1.1.6"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.18",
     "@types/node": "^12.6.9",
     "@types/react": "^16.8.24",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
@@ -45,6 +46,7 @@
     "eslint-plugin-simple-import-sort": "^4.0.0",
     "firebase-server": "^1.0.2",
     "husky": "^3.0.4",
+    "jest": "^24.9.0",
     "lint-staged": "^9.2.5",
     "postcss-color-mod-function": "^3.0.3",
     "prettier": "^1.18.2",
