--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Hanabi",
-  "name": "Hababi",
+  "name": "Hanabi",
   "icons": [
     { "src": "/static/hanabi.png", "type": "image/png", "sizes": "512x512" },
     { "src": "/static/hanabi-192.png", "type": "image/png", "sizes": "192x192" }
