--- a/now.json
+++ b/now.json
@@ -19,7 +19,8 @@
       "FIREBASE_DATABASE_URL": "@firebase_database_url",
       "FIREBASE_PROJECT_ID": "@firebase_project_id",
       "FIREBASE_MESSAGING_SENDER_ID": "@firebase_messaging_sender_id",
-      "FIREBASE_APP_ID": "@firebase_app_id"
+      "FIREBASE_APP_ID": "@firebase_app_id",
+      "SENTRY_DSN": "@sentry_dsn"
     }
   }
 }
