--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "deploy-database": "firebase deploy --only database"
   },
   "dependencies": {
+    "@sentry/browser": "^5.12.4",
     "@types/classnames": "^2.2.9",
     "@types/lodash": "^4.14.137",
     "@types/react-popover": "^0.5.3",
     "@zeit/next-css": "^1.0.1",
+    "@zeit/next-source-maps": "^0.0.3",
     "classnames": "^2.2.6",
     "dotenv-webpack": "^1.7.0",
     "firebase": "^6.3.4",
