--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.17.15",
     "next": "^9.2",
     "next-offline": "^4.0.5",
+    "rc-slider": "^9.2.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-modal": "^3.9.1",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@types/node": "^12.6.9",
+    "@types/rc-slider": "^8.6.5",
     "@types/react": "^16.8.24",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
     "@typescript-eslint/parser": "^2.0.0",
