--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,13 +5,17 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
+    container: cypress/browsers:node12.13.0-chrome78-ff70
 
     steps:
       - name: Checkout
         uses: actions/checkout@v1
+
       - name: Install
         run: yarn install
+
       - name: Lint
         run: yarn lint
+
       - name: Test
         run: yarn test
