--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,18 +4,20 @@ on: [push]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    container: cypress/browsers:node12.13.0-chrome78-ff70
+    runs-on: ubuntu-16.04
 
     steps:
       - name: Checkout
         uses: actions/checkout@v1
 
       - name: Install
-        run: yarn install
+        run: yarn install --frozen-lockfile
 
       - name: Lint
         run: yarn lint
 
       - name: Test
-        run: yarn test
+        uses: cypress-io/github-action@v1
+        with:
+          start: yarn dev
+          wait-on: "http://localhost:3000"
