--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,12 @@
 {
   "presets": ["next/babel"],
-  "plugins": [["root-import"]]
+  "plugins": [
+    [
+      "root-import",
+      {
+        "rootPathSuffix": "./src",
+        "rootPathPrefix": "~/"
+      }
+    ]
+  ]
 }
