--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@react-native-community/masked-view": "0.1.5",
     "@react-navigation/native": "^5.0.8",
     "@react-navigation/stack": "^5.1.0",
+    "assert": "^2.0.0",
     "expo": "~36.0.0",
     "expo-localization": "^8.0.0",
+    "firebase": "^7.9.3",
     "i18next": "^19.3.2",
+    "lodash": "^4.17.15",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-i18next": "^11.3.3",
@@ -24,12 +27,15 @@
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "shuffle-seed": "^1.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@types/assert": "^1.4.6",
     "@types/react": "~16.9.0",
     "@types/react-native": "~0.60.23",
+    "@types/shuffle-seed": "^1.1.0",
     "@typescript-eslint/eslint-plugin": "^2.21.0",
     "@typescript-eslint/parser": "^2.21.0",
     "babel-preset-expo": "~8.0.0",
