--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "classnames": "^2.2.6",
     "dotenv-webpack": "^1.7.0",
     "firebase": "^6.3.4",
+    "husky": "^4.2.3",
     "lodash": "^4.17.15",
     "next": "^9.2",
     "rc-slider": "^9.2.1",
