--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "classnames": "^2.2.6",
     "dotenv-webpack": "^1.7.0",
     "firebase": "^6.3.4",
+    "fireworks-canvas": "^2.4.0",
     "husky": "^4.2.3",
     "lodash": "^4.17.15",
-    "next": "^9.2",
+    "next": "^9.3.3",
     "rc-slider": "^9.2.1",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-fullstory": "^1.4.0",
     "react-ga": "^2.7.0",
     "react-modal": "^3.9.1",
