--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "husky": "^4.2.3",
     "lodash": "^4.17.15",
     "next": "^9.3",
+    "nprogress": "^0.2.0",
     "rc-slider": "^9.2.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -38,6 +39,7 @@
   },
   "devDependencies": {
     "@types/node": "^12.6.9",
+    "@types/nprogress": "^0.2.0",
     "@types/rc-slider": "^8.6.5",
     "@types/react": "^16.8.24",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
