--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@types/lodash": "^4.14.137",
     "@types/react-popover": "^0.5.3",
     "@zeit/next-css": "^1.0.1",
-    "@zeit/next-source-maps": "^0.0.3",
+    "@zeit/next-source-maps": "0.0.4-canary.1",
     "classnames": "^2.2.6",
     "dotenv-webpack": "^1.7.0",
     "firebase": "^6.3.4",
