--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "firebase": "^6.3.4",
     "fireworks-canvas": "^2.4.0",
     "husky": "^4.2.3",
+    "i18next": "^19.4.4",
+    "i18next-browser-languagedetector": "^4.1.1",
     "lodash": "^4.17.15",
     "mem": "^6.1.0",
     "next": "^9.3",
@@ -29,6 +31,7 @@
     "react-dom": "^16.8.6",
     "react-fullstory": "^1.4.0",
     "react-ga": "^2.7.0",
+    "react-i18next": "^11.4.0",
     "react-modal": "^3.9.1",
     "react-popover": "^0.5.10",
     "react-pose": "^4.0.8",
