--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "husky": "^4.2.3",
     "lodash": "^4.17.15",
     "mem": "^6.1.0",
+    "moment": "^2.25.1",
     "next": "^9.3",
     "nprogress": "^0.2.0",
     "rc-slider": "^9.2.1",
