--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -20,12 +20,14 @@ dependencies:
   flutter:
     sdk: flutter
 
-  webview_flutter: ^0.3.0
+  flutter_webview_plugin: "0.3.11"
+  uni_links: "0.2.0"
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_launcher_icons: "^0.7.4"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -68,3 +70,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+  
