--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/nprogress": "^0.2.0",
     "@types/rc-slider": "^8.6.5",
     "@types/react": "^16.8.24",
+    "@types/react-modal": "^3.10.5",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
     "@typescript-eslint/parser": "^2.0.0",
     "eslint": "^6.3.0",
