--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
       "~/*": ["src/*"]
     }
   },
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "scripts"],
   "include": [
     "next-env.d.ts",
     "**/*.ts",
