--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "moment": "^2.25.1",
     "next": "^9.4",
     "next-compose-plugins": "^2.2.0",
+    "next-iron-session": "^4.0.0",
     "next-offline": "^5.0.2",
     "next-optimized-images": "^2.6.0",
     "nprogress": "^0.2.0",
