--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "react-dom": "^16.8.6",
     "react-fullstory": "^1.4.0",
     "react-ga": "^2.7.0",
-    "react-hotjar": "^2.2.0",
     "react-i18next": "^11.4.0",
     "react-modal": "^3.9.1",
     "react-popover": "^0.5.10",
@@ -53,6 +52,7 @@
     "@types/nprogress": "^0.2.0",
     "@types/rc-slider": "^8.6.5",
     "@types/react": "^16.8.24",
+    "@types/react-modal": "^3.10.5",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
     "@typescript-eslint/parser": "^2.0.0",
     "eslint": "^6.3.0",
