try the new framer-motion, not great for now

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv-webpack": "^1.7.0",
     "firebase": "^6.3.4",
     "fireworks-canvas": "^2.4.0",
+    "framer-motion": "^2.0.1",
     "husky": "^4.2.3",
     "i18next": "^19.4.4",
     "i18next-browser-languagedetector": "^4.1.1",
@@ -41,7 +42,6 @@
     "react-i18next": "^11.4.0",
     "react-modal": "^3.9.1",
     "react-popover": "^0.5.10",
-    "react-pose": "^4.0.8",
     "shortid": "^2.2.14",
     "shuffle-seed": "^1.1.6",
     "unique-names-generator": "^4.2.0",
