--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-pose": "^4.0.10",
     "shortid": "^2.2.16",
     "shuffle-seed": "^1.1.6",
+    "type-fest": "^1.1.3",
     "unique-names-generator": "^4.4.0",
     "yarn": "^1.22.10"
   },
@@ -59,12 +60,12 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
     "firebase-server": "^1.1.0",
     "jimp": "^0.16.1",
     "lint-staged": "^10.5.4",
     "postcss-color-mod-function": "^3.0.3",
     "prettier": "^2.2.1",
+    "prettier-plugin-organize-imports": "^2.1.0",
     "responsive-loader": "^2.3.0",
     "typescript": "^4.2.3"
   }
