--- a/.env.sample
+++ b/.env.sample
@@ -1,13 +1,13 @@
-FIREBASE_API_KEY =
-FIREBASE_AUTH_DOMAIN =
-FIREBASE_DATABASE_URL =
-FIREBASE_PROJECT_ID =
-FIREBASE_STORAGE_BUCKET = ""
-FIREBASE_MESSAGING_SENDER_ID =
-FIREBASE_APP_ID =
+NEXT_PUBLIC_FIREBASE_API_KEY =
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN =
+NEXT_PUBLIC_FIREBASE_DATABASE_URL =
+NEXT_PUBLIC_FIREBASE_PROJECT_ID =
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET = ""
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID =
+NEXT_PUBLIC_FIREBASE_APP_ID =
 
-SENTRY_DSN =
+NEXT_PUBLIC_SENTRY_DSN =
 
-GOOGLE_ANALYTICS_ID =
+NEXT_PUBLIC_GOOGLE_ANALYTICS_ID =
 
 COOKIE_PASSWORD = 2gyZ3GDw3LHZQKDhPmPDL3sjREVRXP13
