--- a/public/static/manifest.json
+++ b/public/static/manifest.json
@@ -1,10 +1,10 @@
 {
-  "short_name": "Hanabi",
-  "name": "Hanabi",
-  "description": "Play the Hanabi game online with your friends!",
+  "short_name": "Hanab",
+  "name": "Hanab",
+  "description": "Play the Hanab game online with your friends!",
   "icons": [
-    { "src": "/static/hanabi.png", "type": "image/png", "sizes": "512x512" },
-    { "src": "/static/hanabi-192.png", "type": "image/png", "sizes": "192x192" }
+    { "src": "/static/hanab.png", "type": "image/png", "sizes": "512x512" },
+    { "src": "/static/hanab-192.png", "type": "image/png", "sizes": "192x192" }
   ],
   "start_url": "/",
   "display": "standalone",
