--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "next-iron-session": "^4.2.0",
     "next-offline": "^5.0.5",
     "nprogress": "^0.2.0",
-    "rc-slider": "^9.7.1",
-    "react": "17",
-    "react-dom": "17",
+    "rc-slider": "^10.6.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-fullstory": "^1.4.0",
     "react-ga4": "^2.1.0",
     "react-i18next": "^11.8.10",
@@ -48,7 +48,6 @@
   "devDependencies": {
     "@types/node": "^18.0.0",
     "@types/nprogress": "^0.2.0",
-    "@types/rc-slider": "^8.6.6",
     "@types/react": "17.0.46",
     "@types/react-modal": "^3.12.0",
     "@typescript-eslint/eslint-plugin": "4.33.0",
