--- a/package.json
+++ b/package.json
@@ -3,18 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "cross-env NODE_OPTIONS='--openssl-legacy-provider' next dev",
+    "build": "cross-env NODE_OPTIONS='--openssl-legacy-provider' next build",
+    "start": "cross-env NODE_OPTIONS='--openssl-legacy-provider' next start",
     "lint": "eslint '**/*.{ts,tsx}'"
   },
   "dependencies": {
-    "@sentry/browser": "^6.2.2",
+    "@sentry/browser": "^8.9.2",
     "@types/classnames": "^2.2.11",
     "@types/lodash": "^4.14.168",
+    "@types/react-dom": "17",
     "@types/react-popover": "^0.5.3",
-    "@zeit/next-css": "^1.0.1",
-    "@zeit/next-source-maps": "0.0.4-canary.1",
     "classnames": "^2.2.6",
     "firebase": "^8.3.0",
     "fireworks-canvas": "^2.6.0",
@@ -25,15 +24,14 @@
     "lodash": "^4.17.21",
     "mem": "^8.0.0",
     "moment": "^2.29.1",
-    "next": "^10.0.9",
+    "next": "^11.1.4",
     "next-compose-plugins": "^2.2.1",
-    "next-iron-session": "^4.1.12",
-    "next-offline": "^5.0.3",
-    "next-optimized-images": "^2.6.2",
+    "next-iron-session": "^4.2.0",
+    "next-offline": "^5.0.5",
     "nprogress": "^0.2.0",
     "rc-slider": "^9.7.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "17",
+    "react-dom": "17",
     "react-fullstory": "^1.4.0",
     "react-ga": "^3.3.0",
     "react-i18next": "^11.8.10",
@@ -44,18 +42,21 @@
     "shuffle-seed": "^1.1.6",
     "type-fest": "^1.1.3",
     "unique-names-generator": "^4.4.0",
+    "webpack": "5",
     "yarn": "^1.22.10"
   },
   "devDependencies": {
-    "@types/node": "^14.14.35",
+    "@types/node": "^18.0.0",
     "@types/nprogress": "^0.2.0",
     "@types/rc-slider": "^8.6.6",
-    "@types/react": "^17.0.3",
+    "@types/react": "17.0.46",
     "@types/react-modal": "^3.12.0",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/eslint-plugin": "4.33.0",
     "@typescript-eslint/parser": "^4.18.0",
+    "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "eslint": "^7.22.0",
+    "eslint-config-next": "^14.2.4",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
@@ -66,6 +67,9 @@
     "prettier": "^2.2.1",
     "prettier-plugin-organize-imports": "^2.1.0",
     "responsive-loader": "^2.3.0",
-    "typescript": "^4.2.3"
+    "typescript": "4.3"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
