--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react": "17",
     "react-dom": "17",
     "react-fullstory": "^1.4.0",
-    "react-ga": "^3.3.0",
+    "react-ga4": "^2.1.0",
     "react-i18next": "^11.8.10",
     "react-modal": "^3.12.1",
     "react-popover": "^0.5.10",
