--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lodash": "^4.17.21",
     "mem": "^8.0.0",
     "moment": "^2.29.1",
-    "next": "^11.1.4",
+    "next": "12",
     "next-compose-plugins": "^2.2.1",
     "next-iron-session": "^4.2.0",
     "next-offline": "^5.0.5",
@@ -56,7 +56,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "eslint": "^7.22.0",
-    "eslint-config-next": "^14.2.4",
+    "eslint-config-next": "12",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
