--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "lodash": "^4.17.21",
     "mem": "^8.0.0",
     "moment": "^2.29.1",
-    "next": "12",
+    "next": "13",
     "next-compose-plugins": "^2.2.1",
     "next-iron-session": "^4.2.0",
     "next-offline": "^5.0.5",
     "nprogress": "^0.2.0",
     "rc-slider": "^9.7.1",
-    "react": "17",
-    "react-dom": "17",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-fullstory": "^1.4.0",
     "react-ga4": "^2.1.0",
     "react-i18next": "^11.8.10",
@@ -57,7 +57,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "eslint": "^7.22.0",
-    "eslint-config-next": "12",
+    "eslint-config-next": "13",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
