--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "eslint": "^7.22.0",
-    "eslint-config-next": "13",
+    "eslint-config-next": "^14.2.5",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
@@ -68,7 +68,7 @@
     "prettier": "^2.2.1",
     "prettier-plugin-organize-imports": "^2.1.0",
     "responsive-loader": "^2.3.0",
-    "typescript": "4.3"
+    "typescript": "4.5.2"
   },
   "engines": {
     "node": "18.x"
