--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "prettier": "^2.2.1",
     "prettier-plugin-organize-imports": "^2.1.0",
     "responsive-loader": "^2.3.0",
-    "typescript": "4.5.2"
+    "typescript": "^5.5.4"
   },
   "engines": {
     "node": "18.x"
