--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
     "shortid": "^2.2.16",
     "shuffle-seed": "^1.1.6",
     "type-fest": "^1.1.3",
-    "unique-names-generator": "^4.4.0",
+    "unique-names-generator": "^4.7.1",
     "webpack": "5",
-    "yarn": "^1.22.10"
+    "yarn": "1.22.12"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
